<resources>
    <string name="app_name">OjoCourse</string>
    <string name="register">注册</string>
    <string name="login">登录</string>
    <string name="back">返回</string>
    <string name="username">用户名</string>
    <string name="password">密码</string>
    <string name="number">学号</string>
    <string name="schedule">课程表</string>
    <string name="person">个人</string>
    <string name="error_network">无法访问到服务器，请检查网络环境是否正常。</string>
    <string name="login_success">登录成功。</string>
    <string name="name">姓名</string>
    <string name="logout">注销</string>
    <string name="logout_success">注销成功</string>
    <string name="logout_failed">注销失败。</string>
    <string name="query">查询</string>
    <string name="course">课程名称</string>
    <string name="class_">所属班级</string>
    <string name="time">上课时间</string>
    <string name="place">上课地点</string>
    <string name="remark">备注</string>
    <string name="teacher">上课老师</string>
    <string name="type">课程性质</string>
    <string name="confirm">确认</string>
    <string name="message_no_course">这天没课，小朋友你是否很开心？233333</string>
</resources>
