<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="16dp">

    <TextView
        android:id="@+id/tv_title_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/type"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_teacher" />

    <TextView
        android:id="@+id/tv_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:text="@string/type"
        app:layout_constraintStart_toEndOf="@+id/tv_title_type"
        app:layout_constraintTop_toTopOf="@+id/tv_title_type" />

    <TextView
        android:id="@+id/tv_title_teacher"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/teacher"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_place" />

    <TextView
        android:id="@+id/tv_teacher"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:text="@string/teacher"
        app:layout_constraintStart_toEndOf="@+id/tv_title_teacher"
        app:layout_constraintTop_toTopOf="@+id/tv_title_teacher" />

    <TextView
        android:id="@+id/tv_title_remark"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="44dp"
        android:layout_marginTop="20dp"
        android:text="@string/remark"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_type" />

    <TextView
        android:id="@+id/tv_remark"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:text="@string/remark"
        app:layout_constraintStart_toEndOf="@+id/tv_title_remark"
        app:layout_constraintTop_toTopOf="@+id/tv_title_remark" />

    <TextView
        android:id="@+id/tv_title_place"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/place"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_title_time" />

    <TextView
        android:id="@+id/tv_place"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:text="@string/place"
        app:layout_constraintStart_toEndOf="@+id/tv_title_place"
        app:layout_constraintTop_toTopOf="@+id/tv_title_place" />

    <TextView
        android:id="@+id/tv_title_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/time"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_title_class" />

    <TextView
        android:id="@+id/tv_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:text="@string/time"
        app:layout_constraintStart_toEndOf="@+id/tv_title_time"
        app:layout_constraintTop_toTopOf="@+id/tv_title_time" />

    <TextView
        android:id="@+id/tv_title_class"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/class_"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_title_name" />

    <TextView
        android:id="@+id/tv_class"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:text="@string/class_"
        app:layout_constraintStart_toEndOf="@+id/tv_title_class"
        app:layout_constraintTop_toTopOf="@+id/tv_title_class" />

    <TextView
        android:id="@+id/tv_title_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/course"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:text="@string/course"
        app:layout_constraintStart_toEndOf="@+id/tv_title_name"
        app:layout_constraintTop_toTopOf="@+id/tv_title_name" />

    <Button
        android:id="@+id/btn_confirm"
        android:layout_width="256dp"
        android:layout_height="56dp"
        android:layout_marginTop="48dp"
        android:text="@string/confirm"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_remark" />
</androidx.constraintlayout.widget.ConstraintLayout>